# Solana_Token

./: README.md
sol-token/: Anchor.toml
sol-token/keys/: main.json
sol-token/programs/sol-token/: Cargo.toml
sol-token/programs/sol-token/src/: lib.rs
sol-token/programs/sol-token/src/instructions/: burn_token.rs  mint_token.rs  mod.rs  transfer_token.rs
sol-token/tests/: sol-token.ts
